// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DraftCondensePrompt golden > leaves optional blocks out 1`] = `
{
  "system": "한국어 장편 소설 초안을 의도적으로 축소하는 편집자다.
사건 순서, 인과, 필수 대사, 설정, 인물 말투와 문체를 보존하라.
새 사건을 만들거나 결말·장면을 생략하지 말고, 반복·장황한 묘사만 줄여라.
최종 본문은 약 300자까지 축소하되, 이보다 지나치게 짧게 만들지 마라.
설명, 머리말, 요약 표식 없이 축소한 본문 전체만 출력하라.",
  "user": "[본문]
본문만.",
}
`;

exports[`DraftCondensePrompt golden > leaves optional blocks out 2`] = `
{
  "system": "한국어 장편 소설 초안을 의도적으로 축소하는 편집자다.
사건 순서, 인과, 필수 대사, 설정, 인물 말투와 문체를 보존하라.
새 사건을 만들거나 결말·장면을 생략하지 말고, 반복·장황한 묘사만 줄여라.
최종 본문은 약 300자까지 축소하되, 이보다 지나치게 짧게 만들지 마라.
설명, 머리말, 요약 표식 없이 축소한 본문 전체만 출력하라.",
  "user": "[본문]
본문만.",
}
`;

exports[`DraftCondensePrompt golden > renders every block for the generic variant 1`] = `
{
  "system": "한국어 장편 소설 초안을 의도적으로 축소하는 편집자다.
사건 순서, 인과, 필수 대사, 설정, 인물 말투와 문체를 보존하라.
새 사건을 만들거나 결말·장면을 생략하지 말고, 반복·장황한 묘사만 줄여라.
최종 본문은 약 1200자까지 축소하되, 이보다 지나치게 짧게 만들지 마라.
설명, 머리말, 요약 표식 없이 축소한 본문 전체만 출력하라.",
  "user": "[장면 의도]
화해의 장면

[설정]
엘리아는 의사다
도시는 항구다

[캐릭터 카드]
[엘리아] 역할: main

[준] 역할: side

[본문]
긴 본문이 여기 있다.",
}
`;

exports[`DraftCondensePrompt golden > renders every block for the rich variant 1`] = `
{
  "system": "한국어 장편 소설 초안을 의도적으로 축소하는 편집자다.
사건 순서, 인과, 필수 대사, 설정, 인물 말투와 문체를 보존하라.
새 사건을 만들거나 결말·장면을 생략하지 말고, 반복·장황한 묘사만 줄여라.
최종 본문은 약 1200자까지 축소하되, 이보다 지나치게 짧게 만들지 마라.
설명, 머리말, 요약 표식 없이 축소한 본문 전체만 출력하라.",
  "user": "[장면 의도]
화해의 장면

[설정]
엘리아는 의사다
도시는 항구다

[캐릭터 카드]
[엘리아] 역할: main

[준] 역할: side

[본문]
긴 본문이 여기 있다.",
}
`;

exports[`DraftCondensePrompt golden > renders every block for the xs variant 1`] = `
{
  "system": "본문의 사건 순서와 말투를 보존하며 목표 분량으로 축소하라. 설명 없이 본문만 출력하라.",
  "user": "[장면 의도]
화해의 장면

[설정]
엘리아는 의사다
도시는 항구다

[캐릭터 카드]
[엘리아] 역할: main

[준] 역할: side

[본문]
긴 본문이 여기 있다.",
}
`;
